crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_a_a_equals_apos1_apos1_u0008_gt.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<a a=''\b>\"####)"
---
[
    Token {
        data: "a",
        attrs: Some(
            {
                "\u{8}": None,
                "a": Some(
                    (
                        "",
                        Single,
                    ),
                ),
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "a",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
